refactor: rechecked the code, completed Lab4_position

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <title>Сайтец</title>
+    <title>Сайтец Лабы 4</title>
 </head>
 <body>
     <div class="staticly"><h1>Новостной канал</h1>
@@ -47,6 +47,5 @@
         </div>
     </div>
 
-    
 </body>
 </html>
