feat: finish Lab5 landing_header

--- a/landing/index.html
+++ b/landing/index.html
@@ -35,11 +35,11 @@
 
             <div class="header__right">
                 <div class="sign">
-                    <div class="sign__in">
-                        <a href="#">sign in</a>
-                    </div>
                     <div class="sign__up">
-                        <a href="#">sign up</a>
+                        <a href="#" class="sign__links1">sign up</a>
+                    </div>
+                    <div class="sign__in">
+                        <a href="#" class="sign__links2">sign in</a>
                     </div>
                 </div>
             </div>
