feat: created animat.css file for animations

--- a/landing/index.html
+++ b/landing/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Landing</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="animationsheet" href="./animat.css">
 </head>
 <body>
     <div class="wrapper">
