init: start lab9 wildlife-articles

--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -53,5 +53,10 @@
       </div>
     </div>
   </div>
+  <div class="wild-articles">
+    <div class="last_articles">
+
+    </div>
+  </div>
 </body>
 </html>
