feat: finish lab9 wildlife-articles

--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -91,17 +91,18 @@
           </div>
         </div>
         <!--next-->
-        <div class='articles__basement'>
-          <div class="ddddd">
-            <div class="ddddd__text">
-              <h4>Get notified about new amazing articles</h4>
-            </div>
-            <div class="ddddd__email">
-              <form action="kudata.php">
-                <input name="pole__email" type="email" placeholder="Enter your email address">
-                <input name="button__send" type="submit" placeholder="Send">
-              </form>
-            </div>
+      </div>
+
+      <div class='articles__basement'>
+        <div class="ddddd">
+          <div class="ddddd__text">
+            <h4 id="dd_text">Get notified about new amazing articles</h4>
+          </div>
+          <div class="ddddd__email">
+            <form class="form_center" action="kudata.php">
+              <input class="pole__email" type="email" placeholder="Enter your email address">
+              <input class="button__send" type="submit" placeholder="Send">
+            </form>
           </div>
         </div>
       </div>
